Updated link color
Improved readability.

--- a/style.css
+++ b/style.css
@@ -4,9 +4,17 @@ body {
 	color: black;
 }
 
+a {
+	color: blue;	
+}
+
 @media (prefers-color-scheme: dark) {
 	body {
 		background-color: black;
 		color: white;
+	}
+	
+	a {
+		color: lightblue;	
 	}
 }
